# stock_agent

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
api/: call-agent.js  coordinator.js  extract-ticker.js  finnhub.js  summary.js
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
